--- a/Frontend/task-manager/package.json
+++ b/Frontend/task-manager/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@oxc-parser/binding-linux-x64-gnu": "^0.92.0",
+    "@pinia/nuxt": "0.11.2",
     "lucide": "^0.544.0",
+    "lucide-vue-next": "^0.544.0",
     "nuxt": "^4.1.2",
     "pinia": "^3.0.3",
     "vue": "^3.5.21",
@@ -20,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@nuxt/eslint-config": "^1.9.0",
+    "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-vue": "^10.5.0",
